shortest path optimization, giving more weight to nearby engineers during selection. extra priority given to in-system engineer so it will always be visited if it can engineer blueprints.